--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -248,9 +248,15 @@
 								<li>{GENERATED_NAV_BAR}</li>
 							</ul>
 						</div>
-                                          	<div id="pun-navlinks2">
+                        <div id="pun-navlinks2">
 							<ul class="clearfix">
 								<li>{GENERATED_NAV_BAR}</li>
+							</ul>
+						</div>
+						<div id="pun-navlinks3">
+							<ul class="clearfix">
+								<li>{GENERATED_NAV_BAR}</li>
+                                                        <div class='floatr'/>  
 							</ul>
 						</div>
 					</div>
