--- a/css/style.css
+++ b/css/style.css
@@ -92,12 +92,6 @@
 #pun-navlinks .flash a {color: #FFFFFF;}
 
 /* Xevious Menu2 */
-#pun-head #pun-navlinks2{
-	padding:0;
-}
-#pun-title, #pun-desc, #pun-navlinks2 li:first-child, #pun-navlinks2 li:nth-child(2) {
-	display: none;
-}
 body{
 	background: url('http://img15.hostingpics.net/pics/505732blackmamba.png') repeat top left fixed;
 }
@@ -105,60 +99,63 @@ body{
 	background: 0 !important;
 	border-bottom: 0;
 }
-#pun-navlinks2 {
-	height:36px;
+#pun-navlinks2{
+	margin-top: 10px;
+	padding: 0;
+	height: 36px;
 	background: 0 !important;
 	text-align: center !important;
-	margin-bottom: 50px;
+	margin-bottom: 40px;
 }
-#pun-navlinks2 ul {display: inline-block !important; margin: auto !important; border-bottom: 2px solid #2e9cde;}
-#pun-navlinks2 li:first-child {display: none;}
-#pun-navlinks2 li:nth-child(2) {display: none;}
+#pun-title, #pun-desc, #pun-navlinks2 li:first-child, #pun-navlinks2 li:nth-child(2) {
+	display: none;
+}
+
+#pun-navlinks2 ul {
+	display: inline-block !important;
+	border-bottom: 2px solid #2e9cde;
+}
 #pun-navlinks2 a[href$="register"]{
-	background: #ff062e !important;
+	box-shadow: 0 -3px 0 #ff062e inset;
 	color: white !important;
+}
+#pun-navlinks2 a[href$="memberlist"]{
+	background-color: white;
+	color: #2e9cde;
+	text-shadow: none;
 }
 #pun-navlinks2 ul li {
 	display: inline-block;
 	list-style: none;
-	color: white;
-  	height:36px;
-  	vertical-align:middle;
+  	height: 36px;
+  	vertical-align: middle;
   	font-size: 0;
 }
 #pun-navlinks2 ul li a{
- 	text-shadow: 0 1px 0 black;
-  	height:36px;
-	line-height:36px;
-	font-size: 11px;
-  	display: inline-block;
-	background: rgba(255,255,255,0);
-  	padding: 0 20px;
- 	margin: 0;
+	color: #888;
+ 	/*text-shadow: 0 1px 0 black;*/
 	letter-spacing: 2px;
-	box-shadow: 0 0px 0 transparent inset;
+	font-size: 11px;
+	text-decoration: none;
+ 	line-height:36px;	
+  	display: inline-block;
+  	padding: 0 20px;
+ 	box-shadow: 0 0 0 transparent inset;
 	-webkit-transition: color 0.5s linear, box-shadow 0.5s;
-	-moz-transition: color 0.5s linear, border-bottom 0.5s;
-	-ms-transition: color 0.5s linear, border-bottom 0.5s;
-	-o-transition: color 0.5s linear, border-bottom 0.5s;
-	transition: color 0.5s linear, border-bottom 0.5s;  
+	-moz-transition: color 0.5s linear, box-shadow 0.5s;
+	-ms-transition: color 0.5s linear, box-shadow 0.5s;
+	-o-transition: color 0.5s linear, box-shadow 0.5s;
+	transition: color 0.5s linear, box-shadow 0.5s;  
 }
 #pun-navlinks2 ul li:hover a{
+	color: white;
 	box-shadow: 0 -36px 0 #2e9cde inset;
-	color: white;
 	-webkit-transition: color 0.3s linear, box-shadow 0.3s;
-	-moz-transition: color 0.3s linear, border-bottom 0.3s;
-	-ms-transition: color 0.3s linear, border-bottom 0.3s;
-	-o-transition: color 0.3s linear, border-bottom 0.3s;
-	transition: color 0.3s linear, border-bottom 0.3s;
+	-moz-transition: color 0.3s linear, box-shadow 0.3s;
+	-ms-transition: color 0.3s linear, box-shadow 0.3s;
+	-o-transition: color 0.3s linear, box-shadow 0.3s;
+	transition: color 0.3s linear, box-shadow 0.3s;
 }
-#pun-navlinks2 ul li:active a {
-	color: white;
-	text-shadow:0px -1px black;
-	background: rgba(0,0,0,0.7);
-}
-#pun-navlinks2 a:active, #pun-navlinks a:focus, #pun-navlinks a:hover {text-decoration:none}
-#pun-navlinks2 a:link {color:#707070}
 
 /* esiao Menu 3 (lavalamp) */
 #pun-navlinks3 {
