--- a/css/style.css
+++ b/css/style.css
@@ -163,28 +163,33 @@ body{
 	background: rgba(0, 0, 0, 0.6);
 	border-radius: 10px;
 	padding: 10px;
+	position: relative;
+}
+#pun-navlinks3 ul{
+position: relative;
+	z-index: 300;
 }
 #pun-navlinks3 ul li {
 	display: inline-block!important;
 	list-style: none!important;
-	padding: 5px 10px;
-	margin: 0 10px;
+	padding: 5px 20px;
+	margin: 0;
 }
 #pun-navlinks3 ul li a {text-decoration: none; color: whiteSmoke;}
 #pun-navlinks3 ul li:first-child {display: none!important;}
 #pun-navlinks3 ul li:last-child {display: none!important;}
 #pun-navlinks3 ul li a img {display: none!important;}
 .floatr {
-    	position: absolute;
-    	top: 10px;
-    	z-index: 50;
-    	width: 70px;
-    	height: 30px;
-	background: rgba(255, 255, 255, 0.2);
+	position: absolute;
+	top: 8px;
+	z-index: 0;
+	width: 70px;
+	height: 30px;
+	background: #444;
 	border-radius: 10px;
-        -webkit-transition: all .4s ease-in-out;
-           -moz-transition: all .4s ease-in-out;
-            -ms-transition: all .4s ease-in-out;
-             -o-transition: all .4s ease-in-out;
-                transition: all .4s ease-in-out;
+		-webkit-transition: all .4s ease-in-out;
+	   -moz-transition: all .4s ease-in-out;
+		-ms-transition: all .4s ease-in-out;
+		 -o-transition: all .4s ease-in-out;
+			transition: all .4s ease-in-out;
 }
