--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -259,6 +259,11 @@
                                                         <div class='floatr'/>  
 							</ul>
 						</div>
+						<div id="pun-navlinks4">
+							<ul class="clearfix">
+								<li>{GENERATED_NAV_BAR}</li>
+							</ul>
+						</div>
 					</div>
 
 					<!-- BEGIN switch_ticker_new -->
