--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -253,13 +253,17 @@
 								<li>{GENERATED_NAV_BAR}</li>
 							</ul>
 						</div>
-						<div id="pun-navlinks3">
+						<div id="pun-navlinks4">
 							<ul class="clearfix">
 								<li>{GENERATED_NAV_BAR}</li>
-                                                        <div class='floatr'/>  
 							</ul>
 						</div>
-						<div id="pun-navlinks4">
+						<div id="pun-navlinks5">
+							<ul class="clearfix">
+								<li>{GENERATED_NAV_BAR}</li>
+							</ul>
+						</div>
+						<div id="pun-navlinks6">
 							<ul class="clearfix">
 								<li>{GENERATED_NAV_BAR}</li>
 							</ul>
