--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -266,6 +266,13 @@
 						<div id="pun-navlinks6">
 							<ul class="clearfix">
 								<li>{GENERATED_NAV_BAR}</li>
+                              	<a href="/"><div id="logo_GG"></div></a>
+                              	<!--[if IE]>
+                              	<style>
+                             	#logo_GG{display:none;}
+                              	#pun-navlinks6 ul li{float:none; clear:both;}
+                      	  		</style>
+                              	<![endif]-->
 							</ul>
 						</div>
 					</div>
