--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -251,7 +251,7 @@
 							<ul class="clearfix">
 								<li>{GENERATED_NAV_BAR}</li>
 							</ul>
-                          	<a href="/"><div id="logo_GG"></div></a>
+                          	<div id="logo_GG"><a href="/"></a></div>
                           	<style>#pun-navlinks ul li:first-child {display: none!important;}</style>
                           	<!--[if IE]>
                           	<style>
