--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,24 @@ body{
 .pun {
 	min-width: 960px;
 	max-width: 1280px;
+  	background: url('http://i.imgur.com/kEQu4.png');
+	border-left: 1px solid #2F3233;
+	border-right: 1px solid #2F3233;
+	padding: 10px;
 }
+a, a:hover {
+	text-decoration: none;
+	-webkit-transition: all .2s linear;
+	   -moz-transition: all .2s linear;
+        -ms-transition: all .2s linear;
+         -o-transition: all .2s linear;
+            transition: all .2s linear;
+}
+.pun div, .pun td, .sig-line {border: none;}
+#pun-visit, .main-box {border: none;}
+#pun-about {border: none;}
+tbody {color: #B4B4B4;}
+/* --- Header --- */
 #pun-title, #pun-desc {display: none!important;}
 #pun-intro{
 	background: 0 !important;
@@ -15,13 +32,13 @@ body{
 	display: block;
 	width: 940px;
 	height: 150px;
-	background: grey;
+	background: gray;
 	margin: 0 auto;
 }
 #pun-head #pun-navlinks {
-background-color: transparent;
-border-color: none;
-padding: 0;
+	background-color: transparent;
+	border-color: none;
+	padding: 0;
 }
 #pun-head {
 	margin-bottom: 30px;
