--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body{
 	border-right: 1px solid #2F3233;
 	padding: 10px;
 }
+.pun .topic {border: none;}
 a, a:hover {
 	text-decoration: none;
 	-webkit-transition: all .2s linear;
@@ -39,14 +40,30 @@ tbody {color: #B4B4B4;}
 #pun-visit ul {width: auto;}
 #pun-about {border: none;}
 /* Breadcrumbs */
-.pun-crumbs {background: url('http://i.imgur.com/iN7e8.png');}
-.pun-crumbs p {color:transparent!important; line-height: 26px}
+.pun-crumbs {background: #282828;}
+.pun-crumbs p {color:transparent!important; line-height: 25px}
 .pun-crumbs a {
 	display: inline-block;
 	background: url('http://i.imgur.com/o9jXY.png') no-repeat right;
 	padding-right: 30px;
 	margin-left: -5px;
 }
+.crumbs strong a:link, .crumbs strong a:visited, .crumbs strong a:focus, .crumbs strong a:active {color: white;}
+/* --- Forum --- */
+.pun table.table th {
+	background-color: #333333;
+	color: #C4C4C4;
+}
+.main .main-head {
+	background: url('http://i.imgur.com/IlOz4.png');
+	background-position: -15px;
+	border-bottom: 1px solid #424242
+}
+.main .main-head .page-title {
+	font-size: 14px;
+	color: white;
+}
+.pun .paged-foot, .pun .paged-head {background: none;}
 /* --- Header --- */
 #pun-title, #pun-desc {display: none!important;}
 #pun-intro{
@@ -56,10 +73,10 @@ tbody {color: #B4B4B4;}
 }
 #pun-logo {
 	display: block;
-	width: 940px;
-	height: 150px;
-	background: gray;
-	margin: 0 auto;
+        width: 100%;
+        height: 150px;
+        background: url('http://i.imgur.com/p3F6L.png') center no-repeat;
+        margin: 0 auto;
 }
 #pun-head #pun-navlinks {
 	background-color: transparent;
@@ -142,7 +159,7 @@ tbody {color: #B4B4B4;}
 #pun-navlinks .flash {}
 #logo_GG {
 	display: block;
-	background: url('http://i.imgur.com/AMawf.png');
+	background: url('http://i.imgur.com/UPcR0.png');
 	background-position: top;
 	width: 120px;
 	height:	77px;
@@ -153,7 +170,7 @@ tbody {color: #B4B4B4;}
 }
 #logo_GG a{
 	display: block;
-	background: url('http://i.imgur.com/AMawf.png');
+	background: url('http://i.imgur.com/UPcR0.png');
 	background-position: 0 -77px;
 	width: 120px;
 	height:	77px;
