--- a/template/index_box.html
+++ b/template/index_box.html
@@ -22,7 +22,8 @@
 
 	<!-- BEGIN forumrow -->
 					<tr>
-						<td class="tcl" style="padding-right: {catrow.forumrow.INC_LEVEL_RIGHT}; padding-left: 50px;">
+						<td class="tcl" style="padding-right: {catrow.forumrow.INC_LEVEL_RIGHT};">
+							<div class="foruminfo">
 							<span class="status">
 								<img title="{catrow.forumrow.L_FORUM_FOLDER_ALT}" src="{catrow.forumrow.FORUM_FOLDER_IMG}" alt="{catrow.forumrow.L_FORUM_FOLDER_ALT}" />
 							</span>
@@ -35,6 +36,7 @@
 							<!-- END switch_moderators_links -->
 							{catrow.forumrow.L_LINKS}{catrow.forumrow.LINKS}
 							<strong>{forumrow.L_SUBFORUM_STR}</strong> {forumrow.SUBFORUMS}
+							</div>
 						</td>
 						<td class="tc2">{catrow.forumrow.TOPICS}</td>
 						<td class="tc3">{catrow.forumrow.POSTS}</td>
