--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,23 @@
 body{
 	background: url('http://i.imgur.com/ClTEo.png') repeat top left fixed;
 }
+input[type="button"], input[type="submit"], input[type="reset"], input[type="file"]::-webkit-file-upload-button, button {
+	background: #2E2E2E;
+	color: white;
+	border: 1px solid black;
+	padding: 3px;
+	cursor: pointer;
+}
+.user-info br {float: none; clear: both;}
+.user-info .profile_field_list li {float: left;}
+.pun-privmsg {
+	list-style-type: none;
+	text-align: center;
+	background: #282828;
+	padding: 10px;
+	margin-top: 10px;
+	border-radius: 10px;
+}
 .pun {
 	min-width: 960px;
 	max-width: 1280px;
@@ -20,6 +37,8 @@ a, a:hover {
 }
 .pun div, .pun td, .sig-line {border: none;}
 tbody {color: #CECECE;}
+#pun-legend li img {margin-left: 10px;}
+.topictitle {font-size: 11px; font-weight: normal;}
 /* Visit */
 #pun-visit, .main-box {border: none; padding: 10px; border-radius: 10px;}
 #pun-visit a {color: #CECECE;}
@@ -41,7 +60,7 @@ tbody {color: #CECECE;}
 #pun-about {border: none;}
 /* Breadcrumbs */
 .pun-crumbs {background: #282828; border-radius: 10px; margin: 0;}
-.pun-crumbs p {color:transparent!important; line-height: 25px}
+.pun-crumbs p {color:transparent!important; line-height: 25px; margin-left: 10px;}
 .pun-crumbs a {
 	display: inline-block;
 	background: url('http://i.imgur.com/EA78u.png') no-repeat right;
@@ -49,8 +68,22 @@ tbody {color: #CECECE;}
 	margin-left: -5px;
 }
 .crumbs strong a:link, .crumbs strong a:visited, .crumbs strong a:focus, .crumbs strong a:active {color: white;}
+/* --- Sidebar --- */
+#content-container div#content {margin-right: 190px}
+#right, #content-container div#container, #content-container div#content {
+	-webkit-transition: all .5s;
+	   -moz-transition: all .5s;
+        -ms-transition: all .5s;
+         -o-transition: all .5s;
+            transition: all .5s;
+}
 /* --- Forum --- */
+#main-content > div:first-child{
+	display: none;
+}
 .page-title {background: url('http://i.imgur.com/zfN0y.png') no-repeat right;}
+.pun .table td{border: none !important;}
+.pun .table tr:not(:last-child){border-bottom: 1px solid #1B1B1B !important;}
 .pun table.table th {
 	background-color: #1B1B1B;
 	color: #C4C4C4;
@@ -74,30 +107,153 @@ tbody {color: #CECECE;}
 	background: #1F1F1F;
 	border: 1px solid #282828;
 }
-.pun tbody.statused span.status {margin-right: -44px; margin-left: -44px;}
-.pun tbody.statused td.tcl {
-padding-left: 54px;
-}
-.pun table td.tcl {height: 36px;}
-.pun tbody.statused td.tcl {
-	position: relative; 
-	display: block;
-}
+.pun tbody.statused span.status {left: 5px; margin: 0px; position: absolute;}
 .pun tbody.statused span.status {
-	left: 10px;
+	left: 5px;
     position: absolute;
     margin: 0;
 }
+.pun table td.tcl {height: auto;}
+.pun tbody.statused td.tcl {padding: 0;}
 .pun table .tcl {width:auto;}
 div.last-msg {position: relative;}
-a.last-post-icon {position:absolute; right:0px; top:0px;}
-span.last-post-icon {position:absolute; right:0px; top:-9px;}
+.last-msg img {position:absolute; right:0px; top:0px;}
 .main .main-foot, .main .main-head {
 	background: url('http://i.imgur.com/IlOz4.png');
 	background-position: 15px;
 }
 .tcl a img {display: none!important;}
-.hierarchy, .forumdesc {margin-left: 10px;}
+.foruminfo {
+	height: 100%;
+	padding: 5px 0px 5px 55px;
+	position: relative;
+	min-height: 36px;
+}
+.foruminfo li {list-style: none;}
+/* --- Pagination --- */
+strong.pagination a {
+	font-weight: 400;
+	border: 1px solid #464646;
+	padding: 2px 3px;
+	background: #181818;
+	margin: 0 4px;
+	font-size: 11px;
+}
+.page-sep {display: none;}
+/* --- Reputation Bar --- */
+.vote .vote-bar {
+	border: none;
+}
+.vote .vote-bar-plus {
+	background-color: #43affc;
+}
+.vote .vote-bar-minus {
+	background-color: black;
+}
+.vote .vote-no-bar {
+	height: 50px;
+	background: #4D4D4D;
+	border: none;
+	margin: 0 auto;
+	width: 3px;
+}
+/* --- User --- */
+.user-ident {text-align: center;}
+.pun .post .user {
+	margin-top: -3em;
+}
+.pun .user-ident .username {
+	font-size: 12px;
+	font-weight: normal;
+	position: relative;
+}
+.username {margin-top: 5px;}
+.pun .sig-content {clear: none;}
+/* Staff */
+a[href="/u1"] span, a[href="/u2"] span, a[href="/u3"] span, a[href="/u7"] span, a[href="/u12"] span {text-shadow: 0px 0px 10px;}
+/* utilisateurs spéciaux */
+a[href="/u99"] span {text-shadow: 0px 0px 10px;}
+a[href="/u90"] span {text-shadow: 0px 0px 10px;}
+/* --- Quote/Code --- */
+.postmain cite {
+	display: block;
+	font-style: normal;
+	font-weight: 700;
+	margin: 0 0 0.5em;
+	line-height: 20px;
+	border-bottom: 1px dashed #747474;
+}
+.postmain blockquote {
+	background-color: #1F1F1F;
+	border: 1px solid #383838;
+	padding: .5em 1em;
+}
+.codebox dt {
+	padding: 0;
+	margin-left: 7px;
+	margin-top: 5px;
+}
+.codebox {
+	margin: 0;
+	background-color: #1F1F1F;
+	border: 1px solid #383838;
+}
+.codebox dd {
+	background-color: black;
+	margin: .5em;
+	padding: .5em;
+}
+/* --- CDM --- */
+div#galerie {
+padding: 15px;
+margin: 0 auto;
+text-align: center;
+font: 1.2em Arial, serif;
+width: 600px;
+}
+ul#galerie_mini {
+  margin: 0 auto ;
+  padding: 0 ;
+  padding-bottom: 10px;
+  list-style-type: none ;
+  width:500px;
+}
+ul#galerie_mini li {
+float: left;
+width: 100px;
+height: 100px;
+overflow: hidden;
+}
+ul#galerie_mini li a img {height: 100px;}
+dl#photo {
+  clear: both ;
+  margin: 0 auto ;
+  padding-top: 10px;
+}
+dl#photo dt {
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 20px;
+  text-shadow: 0 0 5px black;
+}
+dl#photo dd {margin: 0 auto;}
+/* --- Portail --- */
+.module .details img {margin: 0;}
+.mod_news {margin: 0 10px;}
+.mod_news div.main-content {padding: 10px; text-align: center;}
+.mod_news div.body {padding: 0;}
+.mod_news .news_title {
+	background: #1F1F1F;
+	border: 1px inset #555;
+	padding: 10px;
+	margin-bottom: 5px;
+	font-weight: bold;
+	text-shadow: 0 0 5px black;
+}
+.module p.author {
+	background: none;
+	text-shadow: none;
+}
 /* --- Header --- */
 #pun-title, #pun-desc {display: none!important;}
 #pun-intro{
@@ -241,7 +397,187 @@ span.last-post-icon {position:absolute; right:0px; top:-9px;}
              -o-animation: flashAnimC 3s linear infinite;
                 animation: flashAnimC 3s linear infinite;
 }
-
+p.message {background: none!important; margin: 0!important;}
+.pun .post {border: 0; margin: 5px 0; border-top: 1px solid #282828;}
+.pun .paged-foot, .pun .paged-head {padding: .6em 0 .3em;}
+.frm-buttons {
+	text-align: center;
+	width: 80%;
+	float: right;
+}
+/* --- SOTW --- */
+.infotitle {
+	color: white;
+	font-family: arial;
+	font-size: 24px;
+}
+.infosubtitle {
+	font-size: 16px;
+	line-height: 24px;
+}
+/* --- Colorpicker --- */
+.colorpicker {
+   width: 356px;
+   height: 176px;
+   overflow: hidden;
+   position: absolute;
+   background: url(http://tinyurl.com/colorpickerimg/colorpicker_background.png);
+   font-family: Arial, Helvetica, sans-serif;
+   display: none;
+}
+.colorpicker_color {
+   width: 150px;
+   height: 150px;
+   left: 14px;
+   top: 13px;
+   position: absolute;
+   background: #f00;
+   overflow: hidden;
+   cursor: crosshair;
+}
+.colorpicker_color div {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 150px;
+   height: 150px;
+   background: url(http://tinyurl.com/colorpickerimg/colorpicker_overlay.png);
+}
+.colorpicker_color div div {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 11px;
+   height: 11px;
+   overflow: hidden;
+   background: url(http://tinyurl.com/colorpickerimg/colorpicker_select.gif);
+   margin: -5px 0 0 -5px;
+}
+.colorpicker_hue {
+   position: absolute;
+   top: 13px;
+   left: 171px;
+   width: 35px;
+   height: 150px;
+   cursor: n-resize;
+}
+.colorpicker_hue div {
+   position: absolute;
+   width: 35px;
+   height: 9px;
+   overflow: hidden;
+   background: url(http://tinyurl.com/colorpickerimg/colorpicker_indic.gif) left top;
+   margin: -4px 0 0 0;
+   left: 0px;
+}
+.colorpicker_new_color {
+   position: absolute;
+   width: 60px;
+   height: 30px;
+   left: 213px;
+   top: 13px;
+   background: #f00;
+}
+.colorpicker_current_color {
+   position: absolute;
+   width: 60px;
+   height: 30px;
+   left: 283px;
+   top: 13px;
+   background: #f00;
+}
+.colorpicker input {
+   background-color: transparent;
+   border: 1px solid transparent;
+   position: absolute;
+   font-size: 10px;
+   font-family: Arial, Helvetica, sans-serif;
+   color: #898989;
+   top: 4px;
+   right: 11px;
+   text-align: right;
+   margin: 0;
+   padding: 0;
+   height: 11px;
+}
+.colorpicker_hex {
+   position: absolute;
+   width: 72px;
+   height: 22px;
+   background: url(http://tinyurl.com/colorpickerimg/colorpicker_hex.png) top;
+   left: 212px;
+   top: 142px;
+}
+.colorpicker_hex input {
+   right: 6px;
+}
+.colorpicker_field {
+   height: 22px;
+   width: 62px;
+   background-position: top;
+   position: absolute;
+}
+.colorpicker_field span {
+   position: absolute;
+   width: 12px;
+   height: 22px;
+   overflow: hidden;
+   top: 0;
+   right: 0;
+   cursor: n-resize;
+}
+.colorpicker_rgb_r {
+   background-image: url(http://tinyurl.com/colorpickerimg/colorpicker_rgb_r.png);
+   top: 52px;
+   left: 212px;
+}
+.colorpicker_rgb_g {
+   background-image: url(http://tinyurl.com/colorpickerimg/colorpicker_rgb_g.png);
+   top: 82px;
+   left: 212px;
+}
+.colorpicker_rgb_b {
+   background-image: url(http://tinyurl.com/colorpickerimg/colorpicker_rgb_b.png);
+   top: 112px;
+   left: 212px;
+}
+.colorpicker_hsb_h {
+   background-image: url(http://tinyurl.com/colorpickerimg/colorpicker_hsb_h.png);
+   top: 52px;
+   left: 282px;
+}
+.colorpicker_hsb_s {
+   background-image: url(http://tinyurl.com/colorpickerimg/colorpicker_hsb_s.png);
+   top: 82px;
+   left: 282px;
+}
+.colorpicker_hsb_b {
+   background-image: url(http://tinyurl.com/colorpickerimg/colorpicker_hsb_b.png);
+   top: 112px;
+   left: 282px;
+}
+.colorpicker_submit {
+   position: absolute;
+   width: 22px;
+   height: 22px;
+   background: url(http://tinyurl.com/colorpickerimg/colorpicker_submit.png) top;
+   left: 322px;
+   top: 142px;
+   overflow: hidden;
+}
+.colorpicker_focus {
+   background-position: center;
+}
+.colorpicker_hex.colorpicker_focus {
+   background-position: bottom;
+}
+.colorpicker_submit.colorpicker_focus {
+   background-position: bottom;
+}
+.colorpicker_slider {
+   background-position: bottom;
+}
+/* --- Media Queries --- */
 @media screen and (min-width: 1280px) {
 	#pun-navlinks ul li {
 		padding: 0 7px;
