--- a/template/index_body.html
+++ b/template/index_body.html
@@ -6,6 +6,7 @@
 		<li><a href="{U_SEARCH_SELF}">{L_SEARCH_SELF}</a></li>
 		<li><a href="{U_SEARCH_UNANSWERED}">{L_SEARCH_UNANSWERED}</a></li>
 		<li><a href="{U_MARK_READ}">{L_MARK_FORUMS_READ}</a></li>
+		<li><a id="switch-sidebar" href="#">Afficher/Masquer la barre latérale</a></li>
 	</ul>
   <div id="user-info">
   	<p>{LOGGED_AS}.</p>
