--- a/template/viewforum_body.html
+++ b/template/viewforum_body.html
@@ -15,6 +15,7 @@
 	 	<li><a href="{U_SEARCH_NEW}">{L_SEARCH_NEW}</a></li>
 	 	<li><a href="{U_SEARCH_SELF}">{L_SEARCH_SELF}</a></li>
 	 	<li><a href="{U_MARK_READ}">{L_MARK_TOPICS_READ}</a></li>
+	 	<li><a id="switch-sidebar" href="#">Afficher/Masquer la barre latérale</a></li>
 	</ul>
 	<div id="user-info">
   	<p>{LOGGED_AS}.</p>
